# octaquant-engine

./: Procfile  README.md  index.html  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
src/octaquant/: __init__.py
src/octaquant/api/: app.py  schemas.py
src/octaquant/core/: config.py
src/octaquant/db/: models.py  session.py
src/octaquant/execution/: service.py
src/octaquant/integrations/: markets.py
src/octaquant/strategy/: confluence.py  gamma_blast.py  indicators.py  models.py  risk.py  smc.py
src/octaquant/streaming/: market_hub.py
static/: index.html
tests/: test_indicators.py  test_risk.py
